# coinbase_crawler

./: .gitignore  Cargo.toml  README.md  run.sh
deposits/: deposits.example.csv
output/: README.md
prices/: 2015.json  2016.json  2017.json  2018.json  2019.json  2020.json
src/: main.rs
trades/: README.md  trades.example.csv  trades.test.csv
