[package]
name = "coinbase_crawler"
version = "0.1.0"
authors = ["pooleja <james@tokensoft.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
csv = "1.1.6"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"